fix mob spacing

--- a/taipei.css
+++ b/taipei.css
@@ -53,17 +53,12 @@ a:hover {
 }
 
 h1 {
-    /* margin: 0 auto;
-    padding: 2rem 0; */
     margin: 0;
     padding: 0;
     font-size: 8rem;
     letter-spacing: 0.4rem;
     color: white;
     text-transform: uppercase;
-    /* align-self: start;
-    position: relative;
-    bottom: 2rem; */
     text-align: center;
 }
 
@@ -132,31 +127,20 @@ li {
 }
 
 #mapid { 
-    /* width: 100%; */
-    
     margin: 10vh 10px 10vh 10px;
     display: block;
-    /*margin: 5vh auto 5vh auto; */
-    /* margin-left: auto;
-    margin-right: auto; */
-    /* width: auto;
-    max-width: 1200px; */
     height: 40vh; 
     width: auto;
     
 }
 
 .portrait.sml {
-    /* grid-row: span 2; */
+
 }
 
 .portrait.med {
     grid-row: span 2;
     grid-column: span 2;
-    /* vertical-align: top; no*/
-    /* text-align:;
-    display: inline-block;
-    float: none; this is the part that makes it work */
 }
 
 .portrait.lrg {
@@ -178,25 +162,6 @@ li {
 img {
     display: block;  
 }
-/* .the-grid img {
-    /* display: block; */
-    /* -o-object-fit: cover;
-    object-fit: cover; */
-/* max-width: 100%; */
-/* overflow: hidden; */
-/* height: 100%;  */
-/* } */ 
-
-/* .icon {
-    width: 25px; 
-    height: auto;
-    align-items: center;
-    fill: var(--main-color);
-}
-
-.icon:hover {
-    fill: var(--secondary-color);
-} */
 
 svg {
 fill: white;
@@ -267,6 +232,26 @@ svg:hover {
         grid-auto-flow: dense;
         grid-gap: 3px;
         margin: 10px; 
+    }
+
+    .byline {
+        font-size: 0.7rem;
+        padding: 6vh 10px 5px 10px;
+        line-height: 1.5;
+        letter-spacing: 0.15rem;
+        /* margin: auto 0;
+        padding-top: 10vh;
+        width: 100%;
+        line-height: 2;
+        text-transform: uppercase;
+        letter-spacing: 0.2rem;
+        text-align: center;
+        font-weight: 400;
+        color: white; */
+    }
+
+    #mapid { 
+        margin: 10px 10px 10px 10px;
     }
 }
 
